Added LinkedIn link to sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,10 @@
               <img src="/images/twitter-24.png" alt="Twitter" class="si si-twitter">
               Twitter
             </a>
+            <a class="list-group-item" href="http://www.linkedin.com/in/ianunruh">
+              <img src="/images/linkedin-24.png" alt="LinkedIn" class="si si-linkedin">
+              LinkedIn
+            </a>
             <a class="list-group-item" href="https://foursquare.com/ianunruh">
               <img src="/images/foursquare-24.png" alt="Foursquare" class="si si-foursquare">
               Foursquare
