Added post about learning assembly in CIS 450

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -64,3 +64,10 @@ img.si-linkedin {
   margin-bottom: 10px;
   font-size: 12px;
 }
+
+table {
+  @extend .table;
+  @extend .table-bordered;
+  @extend .table-hover;
+  @extend .table-condensed;
+}
