--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-      <title>{{ site.name }}</title>
+      <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.name }}</title>
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
