--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+<h1><i class="fa fa-angle-double-right"></i> {{ page.title }}</h1>
 
 <p class="time">{{ page.date | date_to_string }}</p>
 
