Added tweet button for posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,22 @@
 ---
 layout: default
 ---
+
 <h1><i class="fa fa-angle-double-right"></i> {{ page.title }}</h1>
 
 <p class="time">{{ page.date | date_to_string }}</p>
 
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ post.url }}" data-text="{{ page.title }}" data-via="ianunruh" data-size="large">Tweet</a>
+
+<hr>
+
 <div class="content">
   <div class="post">{{ content }}</div>
 </div>
+
+<hr>
+
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ post.url }}" data-text="{{ page.title }}" data-via="ianunruh" data-size="large">Tweet</a>
 
 {% if page.comments %}
 <hr>
@@ -26,3 +35,5 @@ layout: default
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 {% endif %}
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
