--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,10 +46,14 @@
       <hr>
 
       <div class="footer">
+        <div class="pull-right">
+          <a href="https://www.digitalocean.com/?refcode=ddac7aa191d7">
+            <img src="/images/do_badge.png" alt="Powered by DigitalOcean" class="img-do-badge">
+          </a>
+        </div>
+
         <p>
-          &copy; <a href="https://github.com/ianunruh">Ian Unruh</a>
-          &mdash; Powered by <a href="http://jekyllrb.com">Jekyll</a>
-          &mdash; Hosted on <a href="https://www.digitalocean.com/?refcode=ddac7aa191d7">DigitalOcean</a>
+          &copy; 2014 <a href="https://github.com/ianunruh/ianunruh.com">Ian Unruh</a>
         </p>
       </div>
 
