Changed monospace font

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -1,12 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Cuprum);
-@import url(http://fonts.googleapis.com/css?family=Inconsolata);
+@import url(http://fonts.googleapis.com/css?family=Oxygen+Mono);
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.0.3/fonts";
 
 $font-base-size: 16px;
 $headings-font-family: "Cuprum", sans-serif;
-$font-family-monospace: "Inconsolata", monospace;
+$font-family-monospace: "Oxygen Mono", monospace;
 $font-family-sans-serif: "Roboto", monospace;
 
 $brand-primary: #009999;
