--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,23 @@
           <a href="https://foursquare.com/ianunruh"><i class="fa fa-foursquare fa-4x"></i></a>
           <a href="https://linkedin.com/in/ianunruh"><i class="fa fa-linkedin-square fa-4x"></i></a>
 
+          <hr>
+
           <p>
             Researcher at K-State. Libertarian legalist. Caffeine enthusiast. Aspiring devops engineer.
           </p>
+
+          <hr>
+
+          <div class="blogroll">
+            <h3>Blogroll</h3>
+
+            <ul class="list-unstyled">
+              <li><a href="http://lostechies.com/">LosTechies</a></li>
+              <li><a href="http://codeascraft.com/">Code as Craft</a></li>
+              <li><a href="http://aphyr.com/posts">Aphyr</a></li>
+            </ul>
+          </div>
 
         </div>
 
