Reorganized monitoring series
Moved Grafana from part 5 to part 4
Changed titles of posts to reflect actual content
Added series links to every post

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -77,3 +77,11 @@ table {
 code, pre {
   font-size: ($font-size-base - 2);
 }
+
+div.panel-series {
+  @extend .panel;
+  @extend .panel-default;
+  @extend .pull-right;
+
+  margin: 0 15px;
+}
