--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,20 @@
             Researcher at K-State. Libertarian legalist. Caffeine enthusiast. Aspiring devops engineer.
           </p>
 
+          <p>
+            <a href="https://www.google.com/maps/place/Manhattan+KS">The Little Apple</a>
+          </p>
+
           <hr>
 
-          <div class="blogroll">
+          <div>
+            <h3>Links</h3>
+
+            <ul class="list-unstyled">
+              <li><a href="http://ianunruh.com/minecraft">Minecraft Overviewer</a></li>
+              <li><a href="http://last.fm/user/sobenofear">Last.fm</a></li>
+            </ul>
+
             <h3>Blogroll</h3>
 
             <ul class="list-unstyled">
