--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -11,7 +11,7 @@ $font-family-sans-serif: "Roboto", monospace;
 
 $brand-primary: #009999;
 
-$body-bg: #eaeaea;
+$body-bg: #fff;
 $blockquote-border-color: darken($body-bg, 5%);
 $hr-border: darken($body-bg, 5%);
 
