Updated front page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,11 @@
           <hr>
 
           <p>
-            Researcher at K-State. Libertarian legalist. Caffeine enthusiast. Aspiring devops engineer.
+            Network security researcher at Kansas State University. Part-time DevOps engineer. Distributed systems newbie. Caffeine enthusiast. Voluntaryist.
           </p>
 
           <p>
-            <a href="https://www.google.com/maps/place/Manhattan+KS">The Little Apple</a>
+            Based in the <a href="https://www.google.com/maps/place/Manhattan+KS">The Little Apple</a>
           </p>
 
           <hr>
