Prepare for SSL

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Cuprum);
-@import url(http://fonts.googleapis.com/css?family=Oxygen+Mono);
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(//fonts.googleapis.com/css?family=Cuprum);
+@import url(//fonts.googleapis.com/css?family=Oxygen+Mono);
+@import url(//fonts.googleapis.com/css?family=Roboto);
 
 $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.0.3/fonts";
 
