--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,8 @@
             <h3>Links</h3>
 
             <ul class="list-unstyled">
-              <li><a href="http://ianunruh.com/minecraft">Minecraft Overviewer</a></li>
               <li><a href="http://last.fm/user/sobenofear">Last.fm</a></li>
+              <li><a href="https://keybase.io/ianunruh">Keybase</a></li>
             </ul>
 
             <h3>Blogroll</h3>
