Added CloudFlare badge

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -38,6 +38,12 @@ div#main {
   }
 }
 
+.img-cf-badge {
+  height: 30px;
+  width: auto;
+  margin-right: 10px;
+}
+
 .img-do-badge {
   height: 30px;
   width: auto;
