--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,10 @@
 
       <div class="footer">
         <div class="pull-right">
+          <a href="https://www.cloudflare.com">
+            <img src="/images/cloudflare-logo.png" alt="Protected by CloudFlare" class="img-cf-badge">
+          </a>
+
           <a href="https://www.digitalocean.com/?refcode=ddac7aa191d7">
             <img src="/images/do_badge.png" alt="Powered by DigitalOcean" class="img-do-badge">
           </a>
