Updated tagline from Twitter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <hr>
 
           <p>
-            Network security researcher at Kansas State University. Part-time DevOps engineer. Distributed systems newbie. Caffeine enthusiast. Voluntaryist.
+            Network security researcher at Kansas State University. Obsessed with monitoring. Cold brew coffee &amp; craft beer enthusiast. Voluntaryist.
           </p>
 
           <p>
