--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,17 +28,16 @@
           <a href="https://github.com/ianunruh"><i class="fa fa-github-alt fa-4x"></i></a>
           <a href="https://twitter.com/ianunruh"><i class="fa fa-twitter fa-4x"></i></a>
           <a href="https://facebook.com/ian.unruh"><i class="fa fa-facebook-square fa-4x"></i></a>
-          <a href="https://foursquare.com/ianunruh"><i class="fa fa-foursquare fa-4x"></i></a>
           <a href="https://linkedin.com/in/ianunruh"><i class="fa fa-linkedin-square fa-4x"></i></a>
 
           <hr>
 
           <p>
-            Network security researcher at Kansas State University. Obsessed with monitoring. Cold brew coffee &amp; craft beer enthusiast. Voluntaryist.
+            Site Reliability Engineer at <a href="https://linkedin.com">LinkedIn</a>. Former <a href="http://ksu.edu">K-State Wildcat</a>. Craft beer and coffee enthusiast. Voluntaryist.
           </p>
 
           <p>
-            Based in the <a href="https://www.google.com/maps/place/Manhattan+KS">The Little Apple</a>
+            Based in <a href="https://www.google.com/maps/place/Silicon+Valley+California">Silicon Valley, California</a>
           </p>
 
           <hr>
@@ -47,8 +46,8 @@
             <h3>Links</h3>
 
             <ul class="list-unstyled">
-              <li><a href="http://last.fm/user/sobenofear">Last.fm</a></li>
               <li><a href="https://keybase.io/ianunruh">Keybase</a></li>
+              <li><a href="http://last.fm/user/sobenofear">Last.fm</a></li>
             </ul>
 
             <h3>Blogroll</h3>
@@ -82,7 +81,7 @@
         </div>
 
         <p>
-          &copy; 2014 <a href="https://github.com/ianunruh/ianunruh.com">Ian Unruh</a>
+          &copy; 2014-2015 <a href="https://github.com/ianunruh/ianunruh.com">Ian Unruh</a>
         </p>
       </div>
 
